--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -2,5 +2,5 @@ blank_issues_enabled: true
 contact_links:
   - name: Add new ToDo
     about: made by config.yml
-    edit {kenkenpa36} and {ToDO} for your environment
-    url: https://github.com/kaitas/ToDo/issues/new?template=custom.md&projects=kaitas%2FToDo%2F1&labels=ToDo
+    # edit {username} and {repo} for your environment
+    url: https://github.com/kenkenpa36/ToDo/issues/new?template=custom.md&projects=kenkenpa36%2FToDo%2F1&labels=ToDo
